#
#  Makefile.am
# 
#  odbc-bench - a TPC-A and TPC-C like benchmark program for databases 
#  Copyright (C) 2000-2020 OpenLink Software <odbc-bench@openlinksw.com>
#
#  This program is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 2 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#

EXTRA_DIST		= \
	docs_topleft.html \
	chaptermenu_xt_mp.html \
	menutree.js \
	commandline.html \
	index.html \
	preface.html \
	menus.html \
	images/misc/acopdflogo.gif \
	images/misc/leftlogo.gif \
	images/misc/1x1.gif \
	images/tree/menu.gif \
	images/tree/bullet2_open_hl.gif \
	images/tree/menu2.gif \
	images/tree/bullet2_closed_hl.gif \
	images/tree/bullet_open_hl.gif \
	images/tree/item1.gif \
	images/tree/bullet_closed_hl.gif \
	images/tree/item.gif \
	images/tree/bullet2_closed.gif \
	images/tree/1x1.gif \
	images/tree/bullet2_open.gif \
	images/tree/bullet_open.gif \
	images/tree/bullet_closed.gif \
	images/selout.gif \
	images/Image10.jpg \
	images/Image11.jpg \
	images/Image13.jpg \
	images/Image14.jpg \
	images/Image15.jpg \
	images/Image16.jpg \
	images/Image17.jpg \
	images/Image18.jpg \
	images/resultscreate.gif \
	images/rundetails.gif \
	images/editlogdet.gif \
	images/savesel.gif \
	images/populate.gif \
	images/filenew.gif \
	images/login.gif \
	images/stest.gif \
	images/resultsconnect.gif \
	images/dsnok.gif \
	images/resdsn.gif \
	images/gtk1.gif \
	images/edittable.gif \
	images/editrun.gif \
	images/newtest.gif \
	images/mthread.gif \
	images/tabledetails.gif \
	images/newbench.gif \
	images/rundur.gif \
	images/tablesmade.gif \
	images/runend.gif \
	images/gtksplash.jpg \
	images/actioncreate.gif \
	images/newentry.gif \
	images/actionrun.gif \
	images/mtest.gif \
	images/editlogin.gif \
	images/Image1.jpg \
	images/Image2.jpg \
	images/Image3.jpg \
	images/Image4.jpg \
	images/Image5.jpg \
	images/Image6.jpg \
	images/Image7.jpg \
	images/Image8.jpg \
	openlink.css \
	usage.html \
	contents.html \
	title.html
